[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moltrust-adk"
version = "0.1.0"
description = "MolTrust trust verification interceptor for Google ADK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
license-files = []
authors = [{ name = "Lars Kersten Kroehl", email = "kersten.kroehl@cryptokri.ch" }]
keywords = ["google-adk", "adk", "a2a", "moltrust", "agent", "trust", "interceptor", "ai-agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]
dependencies = [
  "google-adk[a2a]>=2.3.0",
  "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://moltrust.ch"
Repository = "https://github.com/MoltyCel/moltrust-adk"
Issues = "https://github.com/MoltyCel/moltrust-adk/issues"

[tool.hatch.build.targets.wheel]
packages = ["moltrust_adk"]
